--- a/src/app/components/creation-slider/creation-slider.component.scss
+++ b/src/app/components/creation-slider/creation-slider.component.scss
@@ -1,86 +1,12 @@
 @import "../../../styles/variables.scss";
 
 :host {
-	.head-container {
-		position: relative;
+	.creation-slider-container {
 		display: flex;
-		justify-content: space-around;
-		align-items: center;
-		height: 450px;
+		margin: 5px 0;
 
-		@media screen and (max-width: 1000px) {
-			display: none;
-		}
-
-		&::after {
-			content: "";
-			position: absolute;
-			opacity: 1.0;
-			top: 0;
-			left: 0;
-			bottom: 0;
-			right: 0;
-			z-index: -1;
-
-			background-position: center;
-			background-size: cover;
-			background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8)), url("/assets/images/home_01.png");
-		}
-
-		img {
-			height: 400px;
-		}
-
-		.head-text {
-			width: 50%;
-			text-align:center;
-		}
-	}
-
-	.head-mobile-container {
-		position: relative;
-		display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-		height: 650px;
-
-		@media screen and (min-width: 1000px) {
-			display: none;
-		}
-
-		&::after {
-			content: "";
-			position: absolute;
-			opacity: 1.0;
-			top: 0;
-			left: 0;
-			bottom: 0;
-			right: 0;
-			z-index: -1;
-
-			background-position: center;
-			background-size: cover;
-			background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8)), url("/assets/images/home_01.png");
-		}
-
-		.head-title {
-			display: flex;
-			align-items: center;
-
-			img {
-				width: 25%;
-			}
-
-			h1 {
-				width: 50%;
-				text-align: center;
-			}
-		}
-
-		.head-text {
-			width: 80%;
-			margin: 0 auto;
-			text-align: center;
+		.creation-slider-input {
+			margin: 0 10px;
 		}
 	}
 }
