--- a/src/app/components/creation-slider/creation-slider.component.scss
+++ b/src/app/components/creation-slider/creation-slider.component.scss
@@ -4,9 +4,87 @@
 	.creation-slider-container {
 		display: flex;
 		margin: 5px 0;
+		width: 100%;
 
-		.creation-slider-input {
-			margin: 0 10px;
+		.creation-slider-help {
+			height: 25px;
+			width: 25px;
+			line-height: 25px;
+			text-align: center;
+			border-radius: 50%;
+			border: 2px solid #ffffff;
+			cursor: pointer;
+		}
+
+		.box-minmax{
+			margin-top: 15px;
+			width: 300px;
+			display: flex;
+			justify-content: space-between;
+		}
+
+		.rs-range {
+			width: 300px;
+			-webkit-appearance: none;
+			&:focus {
+				outline: none;
+			}
+			&::-webkit-slider-runnable-track {
+				width: 100%;
+				height: 2px;
+				cursor: pointer;
+				box-shadow: none;
+				background: #ffffff;
+				border-radius: 0px;
+				border: 0px solid #010101;
+			}
+			&::-moz-range-track {
+				width: 100%;
+				height: 2px;
+				cursor: pointer;
+				box-shadow: none;
+				background: #ffffff;
+				border-radius: 0px;
+				border: 0px solid #010101;
+			}
+			&::-webkit-slider-thumb {
+				box-shadow: none;
+				border: 0px solid #ffffff;
+				box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+				height: 30px;
+				width: 15px;
+				border-radius: 15px;
+				background: rgba(255,255,255,1);
+				cursor: pointer;
+				-webkit-appearance: none;
+				margin-top: -15px;
+			}
+		  	&::-moz-range-thumb{
+				box-shadow: none;
+				border: 0px solid #ffffff;
+				box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+				height: 30px;
+				width: 15px;
+				border-radius: 15px;
+				background: rgba(255,255,255,1);
+				cursor: pointer;
+				-webkit-appearance: none;
+				margin-top: -15px;
+			}
+			&::-moz-focus-outer {
+				border: 0;
+			}
+		}
+
+		.rs-label {
+			position: relative;
+			display: block;
+			width: 25px;
+			height: 25px;
+			border-radius: 50%;
+			line-height: 25px;
+			text-align: center;
+			border: 2px solid $light-color;
 		}
 	}
 }
