--- a/src/app/components/creation-slider/creation-slider.component.scss
+++ b/src/app/components/creation-slider/creation-slider.component.scss
@@ -1,90 +1,89 @@
 @import "../../../styles/variables.scss";
 
 :host {
-	.creation-slider-container {
-		display: flex;
-		margin: 5px 0;
-		width: 100%;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 50px;
+	width: 100%;
 
-		.creation-slider-help {
-			height: 25px;
-			width: 25px;
-			line-height: 25px;
-			text-align: center;
-			border-radius: 50%;
-			border: 2px solid #ffffff;
+	.cs-name {
+		min-width: 100px;
+		max-width: 250px;
+		text-align: right;
+	}
+
+	.cs-value {
+		width: 30px;
+		height: 30px;
+		line-height: 30px;
+		margin: 0 10px;
+		text-align: center;
+		border-radius: 50%;
+		border: 2px solid $light-color;
+	}
+
+	.cs-help {
+		width: 30px;
+		height: 30px;
+		line-height: 30px;
+		margin: 0 5px;
+		text-align: center;
+		cursor: pointer;
+	}
+
+	.cs-range {
+		height: 3px;
+		width: 30%;
+		-webkit-appearance: none;
+		&:focus {
+			outline: none;
+		}
+		&::-webkit-slider-runnable-track {
+			width: 100%;
+			height: 2px;
 			cursor: pointer;
+			box-shadow: none;
+			background: #ffffff;
+			border-radius: 0px;
+			border: 0px solid #010101;
 		}
-
-		.box-minmax{
-			margin-top: 15px;
-			width: 300px;
-			display: flex;
-			justify-content: space-between;
+		&::-moz-range-track {
+			width: 100%;
+			height: 2px;
+			cursor: pointer;
+			box-shadow: none;
+			background: #ffffff;
+			border-radius: 0px;
+			border: 0px solid #010101;
 		}
-
-		.rs-range {
-			width: 300px;
+		&::-webkit-slider-thumb {
+			box-shadow: none;
+			border: 0px solid #ffffff;
+			box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+			height: 30px;
+			width: 15px;
+			border-radius: 15px;
+			background: rgba(255,255,255,1);
+			cursor: pointer;
 			-webkit-appearance: none;
-			&:focus {
-				outline: none;
-			}
-			&::-webkit-slider-runnable-track {
-				width: 100%;
-				height: 2px;
-				cursor: pointer;
-				box-shadow: none;
-				background: #ffffff;
-				border-radius: 0px;
-				border: 0px solid #010101;
-			}
-			&::-moz-range-track {
-				width: 100%;
-				height: 2px;
-				cursor: pointer;
-				box-shadow: none;
-				background: #ffffff;
-				border-radius: 0px;
-				border: 0px solid #010101;
-			}
-			&::-webkit-slider-thumb {
-				box-shadow: none;
-				border: 0px solid #ffffff;
-				box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
-				height: 30px;
-				width: 15px;
-				border-radius: 15px;
-				background: rgba(255,255,255,1);
-				cursor: pointer;
-				-webkit-appearance: none;
-				margin-top: -15px;
-			}
-		  	&::-moz-range-thumb{
-				box-shadow: none;
-				border: 0px solid #ffffff;
-				box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
-				height: 30px;
-				width: 15px;
-				border-radius: 15px;
-				background: rgba(255,255,255,1);
-				cursor: pointer;
-				-webkit-appearance: none;
-				margin-top: -15px;
-			}
-			&::-moz-focus-outer {
-				border: 0;
-			}
+			margin-top: -15px;
 		}
-
-		.rs-label {
-			position: relative;
-			display: block;
-			width: 25px;
-			height: 25px;
-			border-radius: 50%;
-			line-height: 25px;
-			text-align: center;
-			border: 2px solid $light-color;
+		&::-moz-range-thumb{
+			box-shadow: none;
+			border: 0px solid #ffffff;
+			box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
+			height: 30px;
+			width: 15px;
+			border-radius: 15px;
+			background: rgba(255,255,255,1);
+			cursor: pointer;
+			-webkit-appearance: none;
+			margin-top: -15px;
+		}
+		&::-moz-focus-outer {
+			border: 0;
 		}
 	}
 }
