--- a/src/app/components/creation-slider/creation-slider.component.scss
+++ b/src/app/components/creation-slider/creation-slider.component.scss
@@ -12,7 +12,6 @@
 		position: absolute;
 		top: 50px;
 		z-index: 1;
-		width: 60%;
 		padding: 25px;
 		border-radius: 5px;
 		border: 2px solid $secondary-color;
@@ -20,8 +19,8 @@
 	}
 
 	.cs-name {
-		min-width: 100px;
-		max-width: 250px;
+		width: 250px;
+		padding-right: 20px;
 		text-align: right;
 	}
 
@@ -29,72 +28,19 @@
 		width: 30px;
 		height: 30px;
 		line-height: 30px;
-		margin: 0 10px;
+		margin: 0 5px;
 		text-align: center;
-		border-radius: 50%;
-		border: 2px solid $light-color;
+		font-weight: bold;
 	}
 
 	.cs-help {
-		width: 30px;
-		height: 30px;
-		line-height: 30px;
-		margin: 0 5px;
+		width: 25px;
+		height: 25px;
+		line-height: 25px;
+		margin-left: 20px;
 		text-align: center;
 		cursor: pointer;
-	}
-
-	.cs-range {
-		height: 3px;
-		width: 30%;
-		-webkit-appearance: none;
-		&:focus {
-			outline: none;
-		}
-		&::-webkit-slider-runnable-track {
-			width: 100%;
-			height: 2px;
-			cursor: pointer;
-			box-shadow: none;
-			background: #ffffff;
-			border-radius: 0px;
-			border: 0px solid #010101;
-		}
-		&::-moz-range-track {
-			width: 100%;
-			height: 2px;
-			cursor: pointer;
-			box-shadow: none;
-			background: #ffffff;
-			border-radius: 0px;
-			border: 0px solid #010101;
-		}
-		&::-webkit-slider-thumb {
-			box-shadow: none;
-			border: 0px solid #ffffff;
-			box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
-			height: 30px;
-			width: 15px;
-			border-radius: 15px;
-			background: rgba(255,255,255,1);
-			cursor: pointer;
-			-webkit-appearance: none;
-			margin-top: -15px;
-		}
-		&::-moz-range-thumb{
-			box-shadow: none;
-			border: 0px solid #ffffff;
-			box-shadow: 0px 10px 10px rgba(0,0,0,0.25);
-			height: 30px;
-			width: 15px;
-			border-radius: 15px;
-			background: rgba(255,255,255,1);
-			cursor: pointer;
-			-webkit-appearance: none;
-			margin-top: -15px;
-		}
-		&::-moz-focus-outer {
-			border: 0;
-		}
+		border-radius: 50%;
+		border: 2px solid $light-color;
 	}
 }
