--- a/src/app/pages/roleplay/creation/creation.component.scss
+++ b/src/app/pages/roleplay/creation/creation.component.scss
@@ -13,23 +13,28 @@
 		url("/assets/images/home_02.png");
 	}
 
-	.creation-race {
+	.creation-sections {
 		display: flex;
+		flex-direction: row;
 		justify-content: center;
 		width: 100%;
+
+		.creation-section-left {
+			width: 25%;
+		}
+	
+		.creation-section-right {
+			width: 25%;
+		}
 	}
+
+	///////////////////////////////////////////////////////////
 
 	.creation-race-img {
 		height: 200px;
 		width: 200px;
 		margin: 0 10px;
 		border: 2px solid $light-secondary-color;
-	}
-
-	.creation-race-text {
-		display: flex;
-		flex-direction: column;
-		width: 550px;
 	}
 
 	.creation-race-list {
@@ -41,6 +46,8 @@
 		text-decoration: underline;
 		cursor: pointer;
 	}
+
+	///////////////////////////////////////////////////////////
 
 	.creation-value {
 		display: inline-block;
